--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Travel Mate - Index</title>
+  <title>Mybooky Travel</title>
   <meta charset="UTF-8" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
